# rapidcopper

./: README.md  pyproject.toml
src/rapidcopper/: cli.py  tui.py
src/rapidcopper/plugins/: action_echo.py  pipe_clipboard.py
