[tool.poetry]
name = "rapidcopper"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]
readme = "README.md"
packages = [{ include = "rapidcopper", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"


typer = "^0.12.5"
pyperclip = "^1.9.0"
customtkinter = "^5.2.2"
levenshtein = "^0.26.1"
textual = "^0.85.2"
[tool.poetry.group.dev.dependencies]
textual-dev = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
rc = "rapidcopper.cli:app"
rct = "rapidcopper.tui:app"
rcg = "rapidcopper.gui:app"